# avexp-bot-webapp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bot.py  copilot-instructions.md  deploy.sh  google_sheets.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_sheets.py  utils.py
function/: main.py  requirements.txt  sheets.py
tests/: test_bot.py  test_google_sheets.py  test_handler.py
webapp/: index.html
